--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>dubaaai</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-    <script src="https://kit.fontawesome.com/c42d640398.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
             --pink: #e6bbc7;
@@ -20,96 +20,52 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; cursor: none; }
         body { background: var(--bg); color: white; height: 100vh; display: flex; align-items: center; justify-content: center; overflow: hidden; }
 
-        /* Tactical Grid Background */
-        .bg-grid {
-            position: fixed; inset: 0; z-index: -1;
-            background-image: linear-gradient(var(--grid) 1px, transparent 1px), linear-gradient(90deg, var(--grid) 1px, transparent 1px);
-            background-size: 50px 50px;
-        }
-        #spotlight {
-            position: fixed; inset: 0; z-index: -1;
-            background: radial-gradient(circle 400px at var(--x, 50%) var(--y, 50%), rgba(230, 187, 199, 0.06), transparent 80%);
-            pointer-events: none;
-        }
-
-        /* Custom Cursor */
+        /* Grid & Spotlight */
+        .bg-grid { position: fixed; inset: 0; z-index: -1; background-image: linear-gradient(var(--grid) 1px, transparent 1px), linear-gradient(90deg, var(--grid) 1px, transparent 1px); background-size: 50px 50px; }
+        #spotlight { position: fixed; inset: 0; z-index: -1; background: radial-gradient(circle 400px at var(--x, 50%) var(--y, 50%), rgba(230, 187, 199, 0.06), transparent 80%); pointer-events: none; }
         #cursor { width: 8px; height: 8px; background: #fff; border-radius: 50%; position: fixed; pointer-events: none; z-index: 9999; box-shadow: 0 0 15px #fff; transition: transform 0.1s; }
 
-        /* CLICK TO ENTER SCREEN */
-        #enter-screen {
-            position: fixed; inset: 0; background: var(--bg); z-index: 1000;
-            display: flex; align-items: center; justify-content: center;
-            cursor: pointer; transition: 1s ease;
-        }
-        .enter-text {
-            font-size: 40px; font-weight: 600; letter-spacing: 10px;
-            background: linear-gradient(to bottom, #fff, var(--pink));
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            animation: pulse 2s infinite;
-        }
+        /* Enter Screen */
+        #enter-screen { position: fixed; inset: 0; background: var(--bg); z-index: 1000; display: flex; align-items: center; justify-content: center; cursor: pointer; transition: 1s ease; }
+        .enter-text { font-size: 40px; font-weight: 600; letter-spacing: 10px; background: linear-gradient(to bottom, #fff, var(--pink)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: pulse 2s infinite; }
 
-        /* MAIN CONTAINER */
-        .container {
-            width: 100%; max-width: 420px; display: flex; flex-direction: column; gap: 15px;
-            opacity: 0; transform: scale(0.9); transition: 1.2s cubic-bezier(0.16, 1, 0.3, 1);
-        }
+        /* Main Container */
+        .container { width: 100%; max-width: 400px; display: flex; flex-direction: column; gap: 12px; opacity: 0; transform: scale(0.95); transition: 1.2s cubic-bezier(0.16, 1, 0.3, 1); }
 
-        /* NAME & BIO */
-        .header { text-align: center; margin-bottom: 10px; }
-        .name {
-            font-size: 48px; font-weight: 600; letter-spacing: -2px;
-            background: linear-gradient(to bottom, #ffffff 40%, var(--pink) 100%);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            filter: drop-shadow(0 0 15px var(--pink-glow));
-        }
-        .roles { font-size: 13px; color: #666; font-weight: 300; height: 20px; transition: 0.5s; }
+        /* Header */
+        .header { text-align: center; margin-bottom: 5px; }
+        .name { font-size: 44px; font-weight: 600; letter-spacing: -2px; background: linear-gradient(to bottom, #ffffff 40%, var(--pink) 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; filter: drop-shadow(0 0 15px var(--pink-glow)); }
+        .roles { font-size: 12px; color: #666; font-weight: 300; height: 20px; transition: 0.5s; }
 
-        /* WIDGETS */
-        .widget {
-            background: var(--glass); backdrop-filter: blur(20px);
-            border: 1px solid var(--border); border-radius: 20px;
-            padding: 18px; display: flex; align-items: center;
-            transition: 0.4s; position: relative; overflow: hidden;
-        }
+        /* Glass Widgets */
+        .widget { background: var(--glass); backdrop-filter: blur(20px); border: 1px solid var(--border); border-radius: 20px; padding: 16px; display: flex; align-items: center; transition: 0.4s; }
         .widget:hover { border-color: var(--pink); box-shadow: 0 0 20px var(--pink-glow); background: rgba(255,255,255,0.05); }
 
-        .widget-img { width: 50px; height: 50px; border-radius: 50%; border: 1px solid var(--border); margin-right: 15px; }
+        .widget-img { width: 45px; height: 45px; border-radius: 50%; border: 1px solid var(--border); margin-right: 15px; object-fit: cover; background: rgba(255,255,255,0.02); display: flex; align-items: center; justify-content: center; color: var(--pink); font-size: 20px;}
         .widget-info p { font-size: 13px; font-weight: 500; }
-        .widget-info span { font-size: 11px; color: #555; }
+        .widget-info span { font-size: 10px; color: #555; display: block; }
 
-        .btn-join {
-            margin-left: auto; padding: 6px 14px; border-radius: 20px;
-            background: rgba(230, 187, 199, 0.1); color: var(--pink);
-            font-size: 10px; font-weight: 600; text-decoration: none; border: 1px solid var(--pink);
-            transition: 0.3s;
-        }
+        .btn-join { margin-left: auto; padding: 5px 12px; border-radius: 20px; background: rgba(230, 187, 199, 0.05); color: var(--pink); font-size: 9px; font-weight: 600; text-decoration: none; border: 1px solid var(--pink); transition: 0.3s; }
         .btn-join:hover { background: var(--pink); color: #000; }
 
-        /* MUSIC PLAYER */
-        .player { justify-content: space-between; margin-top: 5px; }
-        .player-controls { display: flex; gap: 18px; color: var(--pink); font-size: 16px; }
-        .player-controls i { cursor: pointer; transition: 0.3s; }
-        .player-controls i:hover { transform: scale(1.2); text-shadow: 0 0 10px var(--pink); }
+        /* Glass Player Widget */
+        .glass-player { justify-content: space-between; padding: 12px 20px; background: rgba(230, 187, 199, 0.04); border-color: rgba(230, 187, 199, 0.15); }
+        .player-info { display: flex; align-items: center; gap: 12px; }
+        .player-info i { color: var(--pink); font-size: 14px; text-shadow: 0 0 10px var(--pink); }
+        .player-controls { display: flex; gap: 18px; color: var(--pink); font-size: 14px; }
+        .player-controls i { cursor: pointer; transition: 0.3s; opacity: 0.6; }
+        .player-controls i:hover { opacity: 1; transform: scale(1.1); }
 
-        /* SOCIAL GRID */
-        .social-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; width: 100%; }
-        .social-btn {
-            background: var(--glass); border: 1px solid var(--border); border-radius: 15px;
-            padding: 12px; display: flex; align-items: center; justify-content: center;
-            text-decoration: none; color: white; font-size: 13px; transition: 0.3s;
-        }
+        /* Smaller Social Buttons */
+        .social-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; width: 100%; }
+        .social-btn { background: var(--glass); border: 1px solid var(--border); border-radius: 14px; padding: 10px; display: flex; align-items: center; justify-content: center; text-decoration: none; color: white; transition: 0.3s; }
         .social-btn:hover { border-color: #fff; background: rgba(255,255,255,0.08); }
-        .social-btn i { margin-right: 10px; font-size: 16px; }
+        .social-btn i { font-size: 18px; }
 
-        /* ADMIN LOCK */
-        .admin-lock {
-            position: fixed; bottom: 30px; right: 30px;
-            color: var(--pink); font-size: 22px; cursor: pointer;
-            opacity: 0.3; transition: 0.5s;
-        }
-        .admin-lock:hover { opacity: 1; transform: rotate(-15deg) scale(1.2); text-shadow: 0 0 15px var(--pink); }
+        /* Admin Lock */
+        .admin-lock { position: fixed; bottom: 30px; right: 30px; color: var(--pink); font-size: 20px; cursor: pointer; opacity: 0.3; transition: 0.5s; }
+        .admin-lock:hover { opacity: 1; transform: scale(1.1); }
 
-        /* ANIMATIONS */
         @keyframes pulse { 0%, 100% { opacity: 0.5; } 50% { opacity: 1; } }
         #yt-api { position: absolute; visibility: hidden; pointer-events: none; }
     </style>
@@ -130,80 +86,73 @@
             <div class="roles" id="role-text">CEO @ voxex</div>
         </div>
 
-        <div class="widget player">
-            <div style="display: flex; align-items: center;">
-                <i class="fas fa-compact-disc fa-spin" style="margin-right: 12px; color: var(--pink);"></i>
-                <div style="font-size: 11px; font-weight: 500; letter-spacing: 1px;">SOUNDTRACK</div>
+        <div class="widget glass-player">
+            <div class="player-info">
+                <i class="fa-solid fa-compact-disc fa-spin"></i>
+                <div style="font-size: 10px; letter-spacing: 2px; font-weight: 600; color: #fff; opacity: 0.8;">PLAYING_VIBES</div>
             </div>
             <div class="player-controls">
-                <i class="fas fa-backward" onclick="prev()"></i>
-                <i class="fas fa-play" id="playBtn" onclick="toggle()"></i>
-                <i class="fas fa-forward" onclick="next()"></i>
+                <i class="fa-solid fa-backward-step" onclick="prev()"></i>
+                <i class="fa-solid fa-play" id="playBtn" onclick="toggle()"></i>
+                <i class="fa-solid fa-forward-step" onclick="next()"></i>
             </div>
         </div>
 
         <div class="widget" data-tilt>
-            <img class="widget-img" src="https://www.roblox.com/headshot-thumbnail/image?userId=1600295422&width=420&height=420&format=png">
+            <img class="widget-img" src="https://www.roblox.com/headshot-thumbnail/image?userId=1600295422&width=420&height=420&format=png" onerror="this.src='https://tr.rbxcdn.com/30DAY-AvatarHeadshot-1600295422-Png/420/420/AvatarHeadshot/Png/True'">
             <div class="widget-info">
                 <p>@9dvxn</p>
-                <span>In-Game • Roblox</span>
+                <span>Live on Roblox</span>
             </div>
-            <a href="https://www.roblox.com/users/1600295422/profile" target="_blank" class="btn-join">View</a>
+            <a href="https://www.roblox.com/users/1600295422/profile" target="_blank" class="btn-join">Profile</a>
         </div>
 
         <div class="widget" data-tilt>
-            <div class="widget-img" style="display:flex; align-items:center; justify-content:center; background: rgba(114, 137, 218, 0.1); color: #7289da;">
-                <i class="fab fa-discord" style="font-size: 24px;"></i>
-            </div>
+            <div class="widget-img"><i class="fa-brands fa-discord" style="color: #7289da;"></i></div>
             <div class="widget-info">
-                <p>Commission Hub</p>
-                <span>1.4k members</span>
+                <p>voxex</p>
+                <span>music that fits the vibe</span>
             </div>
             <a href="https://discord.gg/swEpUSpBhs" target="_blank" class="btn-join">Join</a>
         </div>
 
         <div class="widget" data-tilt>
-            <div class="widget-img" style="display:flex; align-items:center; justify-content:center; background: rgba(255,255,255,0.05);">
-                <i class="fas fa-fingerprint" style="font-size: 20px; color: var(--pink);"></i>
-            </div>
+            <div class="widget-img"><i class="fa-solid fa-user-shield" style="color: var(--pink);"></i></div>
             <div class="widget-info">
                 <p>dubai</p>
                 <span>780580976500670494</span>
             </div>
-            <a href="https://discord.com/users/780580976500670494" target="_blank" class="btn-join">Add</a>
+            <a href="https://discord.com/users/780580976500670494" target="_blank" class="btn-join">Message</a>
         </div>
 
         <div class="social-grid">
             <a href="https://www.instagram.com/champagnedubai/" target="_blank" class="social-btn">
-                <i class="fab fa-instagram" style="color: #e1306c;"></i> Instagram
+                <i class="fa-brands fa-instagram" style="color: #e1306c;"></i>
             </a>
             <a href="https://www.tiktok.com/@9dvxn" target="_blank" class="social-btn">
-                <i class="fab fa-tiktok"></i> TikTok
+                <i class="fa-brands fa-tiktok"></i>
             </a>
         </div>
     </div>
 
     <div class="admin-lock" onclick="adminAccess()">
-        <i class="fas fa-lock"></i>
+        <i class="fa-solid fa-shield-halved"></i>
     </div>
 
     <div id="yt-api"></div>
 
     <script>
-        // Start System
         function startHub() {
             document.getElementById('enter-screen').style.opacity = '0';
             setTimeout(() => {
                 document.getElementById('enter-screen').style.display = 'none';
                 const hub = document.getElementById('hub');
-                hub.style.opacity = '1';
-                hub.style.transform = 'scale(1)';
+                hub.style.opacity = '1'; hub.style.transform = 'scale(1)';
                 player.playVideo();
-                document.getElementById('playBtn').className = "fas fa-pause";
+                document.getElementById('playBtn').className = "fa-solid fa-pause";
             }, 1000);
         }
 
-        // Roles
         const roles = ["CEO @ voxex", "Co Executive @ Judah's Customs", "Coordination @ Cloud Customs", "Owner @ dubai's commission hub"];
         let rIdx = 0;
         setInterval(() => {
@@ -212,7 +161,6 @@
             setTimeout(() => { rIdx = (rIdx + 1) % roles.length; el.innerText = roles[rIdx]; el.style.opacity = 1; }, 500);
         }, 3000);
 
-        // Music
         const tracks = ["CdqEe3k1ohc", "WstYC1BH6VQ", "KDtavDy71A0"];
         let tIdx = 0; let player;
         function onYouTubeIframeAPIReady() {
@@ -224,13 +172,12 @@
         }
         function toggle() {
             const btn = document.getElementById('playBtn');
-            if(player.getPlayerState() === 1) { player.pauseVideo(); btn.className = "fas fa-play"; }
-            else { player.playVideo(); btn.className = "fas fa-pause"; }
+            if(player.getPlayerState() === 1) { player.pauseVideo(); btn.className = "fa-solid fa-play"; }
+            else { player.playVideo(); btn.className = "fa-solid fa-pause"; }
         }
         function next() { tIdx = (tIdx+1)%tracks.length; player.loadVideoById(tracks[tIdx]); }
         function prev() { tIdx = (tIdx-1+tracks.length)%tracks.length; player.loadVideoById(tracks[tIdx]); }
 
-        // Cursor & Spotlight
         document.addEventListener('mousemove', e => {
             document.body.style.setProperty('--x', e.clientX + 'px');
             document.body.style.setProperty('--y', e.clientY + 'px');
@@ -238,7 +185,6 @@
             document.getElementById('cursor').style.top = e.clientY + 'px';
         });
 
-        // Admin Auth
         async function adminAccess() {
             const p = prompt("ACCESS_KEY:");
             if(p === "dubaaaismegasupersussypassthatdefinetelynobodtwilleverfigureoutcuziamfuckinghimlmaooooooooahiga") {
@@ -247,13 +193,12 @@
                     await navigator.credentials.create({
                         publicKey: { challenge, rp: { name: "dubaaai" }, user: { id: new Uint8Array([1]), name: "d", displayName: "d" }, pubKeyCredParams: [{ alg: -7, type: "public-key" }], authenticatorSelection: { authenticatorAttachment: "platform" } }
                     });
-                    alert("Hardware Verified. System Unlocked.");
+                    alert("System Unlocked.");
                 } catch(e) { alert("Hardware Denied."); }
             }
         }
 
-        VanillaTilt.init(document.querySelectorAll(".widget"));
-        VanillaTilt.init(document.querySelectorAll(".social-btn"));
+        VanillaTilt.init(document.querySelectorAll(".widget, .social-btn"), { max: 15, speed: 400, glare: true, "max-glare": 0.2 });
     </script>
     <script src="https://www.youtube.com/iframe_api"></script>
 </body>
