--- a/index.html
+++ b/index.html
@@ -1,189 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dubaaai</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        :root {
-            --pink: #e6bbc7;
-            --pink-glow: rgba(230, 187, 199, 0.3);
-            --glass: rgba(255, 255, 255, 0.03);
-            --border: rgba(255, 255, 255, 0.08);
-            --bg: #020202;
-            --grid: rgba(230, 187, 199, 0.02);
-        }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; cursor: none; }
-        body { background: var(--bg); color: white; height: 100vh; display: flex; align-items: center; justify-content: center; overflow: hidden; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Judah's Customs</title>
+<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+<style>
+  /* basic resets */
+  * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
+  body { font-family: 'Share Tech Mono', monospace; background: #0a0a0a; color: #fff; }
+  a { color: inherit; text-decoration: none; }
 
-        .bg-grid { position: fixed; inset: 0; z-index: -1; background-image: linear-gradient(var(--grid) 1px, transparent 1px), linear-gradient(90deg, var(--grid) 1px, transparent 1px); background-size: 50px 50px; }
-        #spotlight { position: fixed; inset: 0; z-index: -1; background: radial-gradient(circle 400px at var(--x, 50%) var(--y, 50%), rgba(230, 187, 199, 0.06), transparent 80%); pointer-events: none; }
-        #cursor { width: 8px; height: 8px; background: #fff; border-radius: 50%; position: fixed; pointer-events: none; z-index: 9999; box-shadow: 0 0 15px #fff; transition: transform 0.1s; }
+  /* sections */
+  section { min-height: 100vh; display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 2rem; transition: opacity 1s ease, transform 1s ease; opacity: 0; transform: translateY(50px); }
+  section.visible { opacity: 1; transform: translateY(0); }
 
-        #enter-screen { position: fixed; inset: 0; background: var(--bg); z-index: 1000; display: flex; align-items: center; justify-content: center; cursor: pointer; transition: 1s ease; }
-        .enter-text { font-size: 40px; font-weight: 600; letter-spacing: 10px; background: linear-gradient(to bottom, #fff, var(--pink)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: pulse 2s infinite; }
+  /* hero */
+  #hero { background: linear-gradient(135deg, #111 0%, #222 100%); text-align: center; }
+  #hero h1 { font-size: 4rem; color: #f0c674; margin-bottom: 1rem; }
+  #hero p { font-size: 1.2rem; margin-bottom: 2rem; color: #aaa; }
+  #hero a { padding: 0.8rem 2rem; border: 1px solid #f0c674; border-radius: 5px; transition: all 0.3s; }
+  #hero a:hover { background: #f0c674; color: #000; }
 
-        .container { width: 100%; max-width: 400px; display: flex; flex-direction: column; gap: 12px; opacity: 0; transform: scale(0.95); transition: 1.2s cubic-bezier(0.16, 1, 0.3, 1); }
+  /* about */
+  #about { max-width: 800px; text-align: center; }
+  #about p { font-size: 1.1rem; line-height: 1.6; color: #ccc; }
 
-        .header { text-align: center; margin-bottom: 5px; }
-        .name { font-size: 44px; font-weight: 600; letter-spacing: -2px; background: linear-gradient(to bottom, #ffffff 40%, var(--pink) 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; filter: drop-shadow(0 0 15px var(--pink-glow)); }
-        .roles { font-size: 12px; color: #666; font-weight: 300; height: 20px; transition: 0.5s; }
+  /* gallery */
+  #gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; width: 100%; max-width: 1200px; padding: 2rem; }
+  #gallery img { width: 100%; border-radius: 8px; transition: transform 0.3s, box-shadow 0.3s; cursor: pointer; }
+  #gallery img:hover { transform: scale(1.05); box-shadow: 0 0 20px #f0c674; }
 
-        .widget { background: var(--glass); backdrop-filter: blur(20px); border: 1px solid var(--border); border-radius: 20px; padding: 16px; display: flex; align-items: center; transition: 0.4s; }
-        .widget:hover { border-color: var(--pink); box-shadow: 0 0 20px var(--pink-glow); background: rgba(255,255,255,0.05); }
-        .widget-img { width: 45px; height: 45px; border-radius: 50%; border: 1px solid var(--border); margin-right: 15px; object-fit: cover; display: flex; align-items: center; justify-content: center; color: var(--pink); font-size: 20px;}
-        .widget-info p { font-size: 13px; font-weight: 500; }
-        .widget-info span { font-size: 10px; color: #555; display: block; }
-        .btn-join { margin-left: auto; padding: 5px 12px; border-radius: 20px; background: rgba(230, 187, 199, 0.05); color: var(--pink); font-size: 9px; font-weight: 600; text-decoration: none; border: 1px solid var(--pink); transition: 0.3s; }
-        .btn-join:hover { background: var(--pink); color: #000; }
+  /* contact */
+  #contact { text-align: center; }
+  #contact a { margin: 0 1rem; padding: 0.5rem 1rem; border: 1px solid #f0c674; border-radius: 5px; transition: all 0.3s; display: inline-block; }
+  #contact a:hover { background: #f0c674; color: #000; }
 
-        .glass-player { justify-content: space-between; padding: 12px 20px; background: rgba(230, 187, 199, 0.04); border-color: rgba(230, 187, 199, 0.15); }
-        .player-info { display: flex; align-items: center; gap: 12px; }
-        .player-controls { display: flex; gap: 18px; color: var(--pink); font-size: 14px; }
-        .player-controls i { cursor: pointer; transition: 0.3s; opacity: 0.8; }
-        .player-controls i:hover { opacity: 1; transform: scale(1.1); }
+  /* footer */
+  footer { text-align: center; padding: 1rem; font-size: 0.9rem; color: #555; }
 
-        .social-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; width: 100%; }
-        .social-btn { background: var(--glass); border: 1px solid var(--border); border-radius: 14px; padding: 10px; display: flex; align-items: center; justify-content: center; text-decoration: none; color: white; transition: 0.3s; }
-        .social-btn:hover { border-color: #fff; background: rgba(255,255,255,0.08); }
-        .social-btn i { font-size: 18px; }
-
-        .admin-lock { position: fixed; bottom: 30px; right: 30px; color: var(--pink); font-size: 20px; cursor: pointer; opacity: 0.3; transition: 0.5s; }
-        .admin-lock:hover { opacity: 1; transform: scale(1.1); }
-        @keyframes pulse { 0%, 100% { opacity: 0.5; } 50% { opacity: 1; } }
-        #yt-api { position: absolute; visibility: hidden; pointer-events: none; }
-    </style>
+</style>
 </head>
 <body>
 
-<div class="bg-grid"></div>
-<div id="spotlight"></div>
-<div id="cursor"></div>
+<!-- hero -->
+<section id="hero" class="visible">
+  <h1>Judah's Customs</h1>
+  <p>Custom designs, built your way.</p>
+  <a href="#gallery">See Work</a>
+</section>
 
-<div id="enter-screen" onclick="startHub()">
-    <div class="enter-text">dubaaai</div>
-</div>
+<!-- about -->
+<section id="about">
+  <h2>What we do</h2>
+  <p>We craft custom designs with precision and style. From concept to creation, every piece is built to stand out.</p>
+</section>
 
-<div class="container" id="hub">
-    <div class="header">
-        <h1 class="name">dubaaai</h1>
-        <div class="roles" id="role-text">CEO @ voxex</div>
-    </div>
+<!-- gallery -->
+<section id="gallery">
+  <img src="https://media.discordapp.net/attachments/1302425103006564467/1468764172929208391/v3.png?ex=69872efb&is=6985dd7b&hm=eacaac5736a29ddb9cfc005f1c6fa1dcc76017dee584a05e189c4db557ec955f&=&format=webp&quality=lossless&width=1042&height=313" alt="work 1">
+  <img src="https://media.discordapp.net/attachments/1302425103006564467/1468763501144051732/ERLC_OA_Banners.png?ex=69872e5a&is=6985dcda&hm=97ef0e8152ab65925ef6dffe73c9df0625b8f37ffd24a7cc467ee9e3a19b1d64&=&format=webp&quality=lossless&width=1042&height=313" alt="work 2">
+  <img src="https://media.discordapp.net/attachments/1461546579159945321/1462135543390277643/image.png?ex=69877556&is=698623d6&hm=7f5698b0273c3c28da43ab57058e48bb37404d9ada06bbd9635da3b183e9b2ef&=&format=webp&quality=lossless&width=817&height=290" alt="work 3">
+  <img src="https://media.discordapp.net/attachments/1461546579159945321/1465610895072694365/image.png?ex=698793c3&is=69864243&hm=3507ab33d850f2518a1e68f201d1bb09ce28d49b00ce54252e1c0755c5c62ec5&=&format=webp&quality=lossless&width=876&height=340" alt="work 4">
+</section>
 
-    <!-- music player -->
-    <div class="widget glass-player">
-        <div class="player-info">
-            <img src="https://www.roblox.com/headshot-thumbnail/image?userId=1600295422&width=420&height=420&format=png" style="width:40px; height:40px; border-radius:50%; border:1px solid var(--border); margin-right:10px;">
-            <div style="display:flex; flex-direction:column; justify-content:center;">
-                <span style="font-size:12px; font-weight:600; color:#fff; opacity:0.9; letter-spacing:1px;">PLAYING VIBES</span>
-                <span style="font-size:10px; color:#aaa;">TRACK NAME</span>
-            </div>
-        </div>
-        <div class="player-controls">
-            <i class="fa-solid fa-backward-step" onclick="prev()" style="color:var(--pink); font-size:18px;"></i>
-            <i class="fa-solid fa-play" id="playBtn" onclick="toggle()" style="color:var(--pink); font-size:18px;"></i>
-            <i class="fa-solid fa-forward-step" onclick="next()" style="color:var(--pink); font-size:18px;"></i>
-        </div>
-    </div>
+<!-- contact -->
+<section id="contact">
+  <h2>Get in touch</h2>
+  <p>Contact us within Discord, or email us directly.</p>
+  <a href="mailto:contact@judahscustoms.com">email</a>
+  <a href="https://discord.com/users/1044686997194805280">judah</a>
+  <a href="https://discord.gg/judah">discord</a>
+</section>
 
-    <!-- roblox widget -->
-    <div class="widget" data-tilt>
-        <img class="widget-img" src="https://www.roblox.com/headshot-thumbnail/image?userId=1600295422&width=420&height=420&format=png">
-        <div class="widget-info">
-            <p>@9dvxn</p>
-            <span>Live on Roblox</span>
-        </div>
-        <a href="https://www.roblox.com/users/1600295422/profile" target="_blank" class="btn-join">Profile</a>
-    </div>
-
-    <!-- discord widget -->
-    <div class="widget" data-tilt>
-        <img class="widget-img" src="https://media.discordapp.net/attachments/1465847692797284515/1465849553835135057/pfp129344.png" style="width:45px; height:45px; border-radius:50%; margin-right:12px; border:1px solid var(--border);">
-        <div class="widget-info">
-            <p>dubaaai</p>
-            <span>young entrepreneur</span>
-        </div>
-        <a href="https://discord.com/users/780580976500670494" target="_blank" class="btn-join">Message</a>
-    </div>
-
-    <div class="social-grid">
-        <a href="https://www.instagram.com/champagnedubai/" target="_blank" class="social-btn">
-            <i class="fa-brands fa-instagram" style="color: #e1306c;"></i>
-        </a>
-        <a href="https://www.tiktok.com/@9dvxn" target="_blank" class="social-btn">
-            <i class="fa-brands fa-tiktok" style="color: var(--pink);"></i>
-        </a>
-    </div>
-</div>
-
-<div class="admin-lock" onclick="adminAccess()">
-    <i class="fa-solid fa-shield-halved"></i>
-</div>
-
-<div id="yt-api"></div>
+<!-- footer -->
+<footer>
+  &copy; 2026 Judah's Customs
+</footer>
 
 <script>
-    function startHub() {
-        document.getElementById('enter-screen').style.opacity = '0';
-        setTimeout(() => {
-            document.getElementById('enter-screen').style.display = 'none';
-            const hub = document.getElementById('hub');
-            hub.style.opacity = '1'; hub.style.transform = 'scale(1)';
-            player.playVideo();
-            document.getElementById('playBtn').className = "fa-solid fa-pause";
-        }, 1000);
-    }
-
-    const roles = ["CEO @ voxex", "Co Executive @ Judah's Customs", "Coordination @ Cloud Customs", "Owner @ dubai's commission hub"];
-    let rIdx = 0;
-    setInterval(() => {
-        const el = document.getElementById('role-text');
-        el.style.opacity = 0;
-        setTimeout(() => { rIdx = (rIdx + 1) % roles.length; el.innerText = roles[rIdx]; el.style.opacity = 1; }, 500);
-    }, 3000);
-
-    const tracks = ["CdqEe3k1ohc", "WstYC1BH6VQ", "KDtavDy71A0"];
-    let tIdx = 0; let player;
-    function onYouTubeIframeAPIReady() {
-        player = new YT.Player('yt-api', {
-            height: '0', width: '0', videoId: tracks[tIdx],
-            playerVars: { 'autoplay': 0, 'controls': 0 },
-            events: { 'onStateChange': (e) => { if(e.data === 0) next(); } }
-        });
-    }
-    function toggle() {
-        const btn = document.getElementById('playBtn');
-        if(player.getPlayerState() === 1) { player.pauseVideo(); btn.className = "fa-solid fa-play"; }
-        else { player.playVideo(); btn.className = "fa-solid fa-pause"; }
-    }
-    function next() { tIdx = (tIdx+1)%tracks.length; player.loadVideoById(tracks[tIdx]); }
-    function prev() { tIdx = (tIdx-1+tracks.length)%tracks.length; player.loadVideoById(tracks[tIdx]); }
-
-    document.addEventListener('mousemove', e => {
-        document.body.style.setProperty('--x', e.clientX + 'px');
-        document.body.style.setProperty('--y', e.clientY + 'px');
-        document.getElementById('cursor').style.left = e.clientX + 'px';
-        document.getElementById('cursor').style.top = e.clientY + 'px';
+  // simple scroll reveal
+  const sections = document.querySelectorAll('section');
+  const revealOnScroll = () => {
+    sections.forEach(sec => {
+      const top = sec.getBoundingClientRect().top;
+      const screenHeight = window.innerHeight;
+      if(top < screenHeight - 100) sec.classList.add('visible');
     });
-
-    async function adminAccess() {
-        const p = prompt("ACCESS_KEY:");
-        if(p === "dubaaaismegasupersussypassthatdefinetelynobodtwilleverfigureoutcuziamfuckinghimlmaooooooooahiga") {
-            const challenge = new Uint8Array(32); window.crypto.getRandomValues(challenge);
-            try {
-                await navigator.credentials.create({
-                    publicKey: { challenge, rp: { name: "dubaaai" }, user: { id: new Uint8Array([1]), name: "d", displayName: "d" }, pubKeyCredParams: [{ alg: -7, type: "public-key" }], authenticatorSelection: { authenticatorAttachment: "platform" } }
-                });
-                alert("System Unlocked.");
-            } catch(e) { alert("Hardware Denied."); }
-        }
-    }
-
-    VanillaTilt.init(document.querySelectorAll(".widget, .social-btn"), { max: 15, speed: 400, glare: true, "max-glare": 0.2 });
+  };
+  window.addEventListener('scroll', revealOnScroll);
+  revealOnScroll();
 </script>
-<script src="https://www.youtube.com/iframe_api"></script>
+
 </body>
 </html>
